--- a/index.html
+++ b/index.html
@@ -17,35 +17,20 @@
 <style>
 :root{
   --maxw: 760px;
-
-  /* 🔥 Titre plus dominant */
   --titleMaxH: 34vh;
-
-  /* 🔥 Icônes plus équilibrées */
   --btn: clamp(100px, min(22vw, 15vh), 170px);
-
   --gap: clamp(10px, min(3vw, 2vh), 18px);
 }
-
 *{ box-sizing:border-box; }
-
 html, body{
-  margin:0;
-  padding:0;
-  height:100%;
+  margin:0; padding:0; height:100%;
   overflow:auto;
   overscroll-behavior-y:auto;
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   -webkit-text-size-adjust:100%;
 }
-
-/* Background stable */
-body{
-  background:#000 url("background.png") center top / cover no-repeat fixed;
-}
-
-/* Layout */
+body{ background:#000 url("background.png") center top / cover no-repeat fixed; }
 .wrap{
   min-height:100vh;
   min-height:100dvh;
@@ -55,8 +40,6 @@ body{
   align-items:center;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 }
-
-/* Titre */
 .title{
   margin-top: calc(env(safe-area-inset-top) + 2px);
   width: min(94vw, 680px);
@@ -66,12 +49,9 @@ body{
   display:block;
   pointer-events:none;
   user-select:none;
-
-  transform: scale(1.25);      /* 👈 agrandit visuellement */
-  transform-origin: center top; /* 👈 reste ancré en haut */
+  transform: scale(1.25);
+  transform-origin: center top;
 }
-
-/* Grille */
 .grid{
   width: min(94vw, var(--maxw));
   margin-top: clamp(8px, 1.5vh, 16px);
@@ -81,7 +61,6 @@ body{
   justify-items:center;
   align-content:start;
 }
-
 .btn{
   width: var(--btn);
   height: var(--btn);
@@ -89,31 +68,83 @@ body{
   text-decoration:none;
   -webkit-tap-highlight-color:transparent;
 }
-
-.btn img{
-  width:100%;
-  height:100%;
-  object-fit:contain;
-  display:block;
-}
-
-/* Tablettes */
+.btn img{ width:100%; height:100%; object-fit:contain; display:block; }
 @media (min-width:768px){
-  :root{
-    --btn: clamp(110px, 16vw, 180px);
-    --titleMaxH: 26vh;
-    --maxw:900px;
-  }
+  :root{ --btn: clamp(110px, 16vw, 180px); --titleMaxH: 26vh; --maxw:900px; }
 }
+
+/* ===== LOGIN FULL CENTER ===== */
+
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("background.png") center/cover no-repeat fixed;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+#loginBox {
+  width: 90%;
+  max-width: 380px;
+  padding: 40px 30px;
+  border-radius: 18px;
+  backdrop-filter: blur(14px);
+  background: rgba(0, 0, 0, 0.65);
+  text-align: center;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
+}
+
+#loginTitle {
+  margin: 0 0 30px 0;
+  font-size: 24px;
+  letter-spacing: 2px;
+  color: #ffffff;
+}
+
+.g_id_signin {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+#loginMsg {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #ff6b6b;
+}
+
+#logoutBtn {
+  margin-top: 15px;
+  padding: 8px 20px;
+  border-radius: 8px;
+  border: none;
+  background: rgba(255,255,255,0.1);
+  color: white;
+  cursor: pointer;
+}
+
+#logoutBtn:hover {
+  background: rgba(255,255,255,0.2);
+}
+
 </style>
+
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
-<div id="loginBox" style="text-align:center;margin-top:120px;">
+
+<!-- LOGIN -->
+<div id="loginBox">
+  <h2 id="loginTitle">Accès Portail</h2>
+
+  <!-- Google button -->
   <div id="g_id_onload"
        data-client_id="690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com"
-       data-callback="handleCredentialResponse">
+       data-callback="handleCredentialResponse"
+       data-auto_prompt="false">
   </div>
 
   <div class="g_id_signin"
@@ -123,93 +154,192 @@ body{
        data-text="sign_in_with"
        data-shape="rectangular">
   </div>
+
+  <p id="loginMsg"></p>
+
+  <button id="logoutBtn" type="button">Déconnexion</button>
 </div>
-<main class="wrap" style="display:none;">
 
-<img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
+<!-- PORTAIL -->
+<main class="wrap" id="portal" style="display:none;">
+  <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
-<section class="grid">
-
-<a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/">
-<img src="entretien.png" alt="Entretien">
-</a>
-
-<a class="btn" href="documents.html">
-<img src="documents.png" alt="Documents">
-</a>
-
-<a class="btn" href="organigramme.html">
-<img src="organigramme.png" alt="Organigramme">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="informations.png" alt="Informations">
-</a>
-
-<a class="btn" href="planning.html">
-<img src="planning.png" alt="Planning">
-</a>
-
-<a class="btn" href="equipes.html">
-<img src="equipes.png" alt="Équipes">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="book.png" alt="Book">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="galerie.png" alt="Galerie">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="admin.png" alt="Admin">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="gardes postées.png" alt="Gardes postées">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="tickets carburant.png" alt="Tickets carburant">
-</a>
-
-<a class="btn" href="construction.png">
-<img src="désinfection VSAV.png" alt="Désinfection VSAV">
-</a>
-
-</section>
+  <section class="grid" aria-label="Menu">
+    <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/"><img src="entretien.png" alt="Entretien"></a>
+    <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
+    <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
+    <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
+    <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
+    <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
+    <a class="btn" href="construction.png"><img src="book.png" alt="Book"></a>
+    <a class="btn" href="construction.png"><img src="galerie.png" alt="Galerie"></a>
+    <a class="btn" href="construction.png"><img src="admin.png" alt="Admin"></a>
+    <a class="btn" href="construction.png"><img src="gardes postées.png" alt="Gardes postées"></a>
+    <a class="btn" href="construction.png"><img src="tickets carburant.png" alt="Tickets carburant"></a>
+    <a class="btn" href="construction.png"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
+  </section>
 </main>
+
 <script>
-function handleCredentialResponse(response) {
+/* ====== CONFIG (SEULS 2 TRUCS À METTRE) ====== */
+const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
+const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec"; // https://script.google.com/macros/s/XXXX/exec
 
- const payload = response.credential.split('.')[1]
-  .replace(/-/g, '+')
-  .replace(/_/g, '/');
+const LS_KEY = "cs_portail_email_v1";
 
-const data = JSON.parse(decodeURIComponent(escape(atob(payload))));
-const email = data.email || "";
+/* ====== DOM ====== */
+const $loginBox = document.getElementById("loginBox");
+const $portal = document.getElementById("portal");
+const $msg = document.getElementById("loginMsg");
+const $logout = document.getElementById("logoutBtn");
 
-  console.log("Email connecté :", email);
-
-  // Appel vers ton Apps Script
-  fetch("https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec" + encodeURIComponent(email))
-    .then(res => res.text())
-    .then(txt => {
-      const json = JSON.parse(txt.replace(/^callback\(|\);?$/g, ''));
-
-      if(json.ok){
-        document.getElementById("loginBox").style.display = "none";
-        document.querySelector("main").style.display = "block";
-      } else {
-        alert("Accès refusé");
-      }
-    })
-    .catch(err => {
-      console.error(err);
-      alert("Erreur de connexion");
-    });
+/* ====== UI ====== */
+function showMsg(t){ $msg.textContent = t || ""; }
+function showPortal(){
+  $loginBox.style.display = "none";
+  $portal.style.display = "flex";
 }
+function showLogin(){
+  $portal.style.display = "none";
+  $loginBox.style.display = "block";
+}
+
+/* ====== JWT email (ROBUSTE) ====== */
+function b64urlToUtf8(b64url){
+  let s = String(b64url || "").replace(/-/g, "+").replace(/_/g, "/");
+  while (s.length % 4) s += "="; // padding
+  const bin = atob(s);
+  let out = "";
+  for (let i=0;i<bin.length;i++){
+    out += "%" + bin.charCodeAt(i).toString(16).padStart(2,"0");
+  }
+  return decodeURIComponent(out);
+}
+function parseJwtEmail(credential){
+  const parts = String(credential || "").split(".");
+  if (parts.length < 2) return "";
+  const payloadJson = b64urlToUtf8(parts[1]);
+  const payload = JSON.parse(payloadJson);
+  return String(payload.email || "").trim().toLowerCase();
+}
+
+/* ====== JSONP ====== */
+function jsonp(url, cbName, timeoutMs = 30000){
+  return new Promise((resolve, reject) => {
+    const script = document.createElement("script");
+    script.async = true;
+    script.defer = true;
+    script.crossOrigin = "anonymous";
+
+    const cleanup = () => {
+      script.remove();
+      try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
+    };
+
+    const timer = setTimeout(() => {
+      cleanup();
+      reject(new Error("Timeout JSONP"));
+    }, timeoutMs);
+
+    window[cbName] = (data) => {
+      clearTimeout(timer);
+      cleanup();
+      resolve(data);
+    };
+
+    // cache-buster (mobile/proxy)
+    const sep = url.includes("?") ? "&" : "?";
+    script.src = url + sep + "_t=" + Date.now();
+
+    script.onerror = () => {
+      clearTimeout(timer);
+      cleanup();
+      reject(new Error("Erreur JSONP (script bloqué)"));
+    };
+
+    document.head.appendChild(script);
+  });
+}
+
+
+async function authCheck(email){
+  const cb = "cb_auth_" + Math.random().toString(36).slice(2);
+  const url = `${API}?view=auth_check&email=${encodeURIComponent(email)}&nocache=1&callback=${cb}`;
+
+  // 2 tentatives (mobile capricieux)
+  try {
+    return await jsonp(url, cb, 30000);
+  } catch(e1){
+    return await jsonp(url, cb, 30000);
+  }
+}
+
+/* ====== Google callback ====== */
+async function handleCredentialResponse(response){
+  try{
+    showMsg("Vérification de l’accès…");
+
+    const email = parseJwtEmail(response.credential);
+    if(!email){
+      localStorage.removeItem(LS_KEY);
+      showLogin();
+      showMsg("Erreur : email introuvable.");
+      return;
+    }
+
+    const res = await authCheck(email);
+
+    if(res && res.ok === true){
+      localStorage.setItem(LS_KEY, email);
+      showMsg("");
+      showPortal();
+    }else{
+      localStorage.removeItem(LS_KEY);
+      showLogin();
+      showMsg("Accès refusé.");
+    }
+  }catch(err){
+    localStorage.removeItem(LS_KEY);
+    showLogin();
+    showMsg("Erreur réseau / serveur.");
+  }
+}
+
+/* ====== Boot ====== */
+(async function(){
+  // inject client_id (UN SEUL ENDROIT)
+  const g = document.getElementById("g_id_onload");
+  g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
+
+  showLogin();
+  showMsg("");
+
+  // si email mémorisé => RECHECK obligatoire
+  const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
+  if(saved){
+    try{
+      showMsg("Vérification…");
+      const res = await authCheck(saved);
+      if(res && res.ok === true){
+        showMsg("");
+        showPortal();
+      }else{
+        localStorage.removeItem(LS_KEY);
+        showMsg("Accès refusé.");
+      }
+    }catch(e){
+      localStorage.removeItem(LS_KEY);
+      showMsg("Erreur réseau / serveur.");
+    }
+  }
+})();
+
+/* Déconnexion */
+$logout.addEventListener("click", ()=>{
+  localStorage.removeItem(LS_KEY);
+  showLogin();
+  showMsg("Déconnecté.");
+});
 </script>
 
 </body>
