--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 *{ box-sizing:border-box; }
 html, body{
   margin:0; padding:0; height:100%;
-  overflow:auto;
-  overscroll-behavior-y:auto;
+  overflow:hidden;
+  overscroll-behavior-y:none;
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   -webkit-text-size-adjust:100%;
 }
 body{ background:#000 url("background.png") center top / cover no-repeat fixed; }
 .wrap{
-  min-height:100vh;
-  min-height:100dvh;
+  height:100dvh;
   width:100%;
   display:flex;
   flex-direction:column;
   align-items:center;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 }
+
 .title{
   margin-top: calc(env(safe-area-inset-top) + 2px);
   width: min(94vw, 680px);
